Real-BackEnd/src/main/java/com/example/BeFETest/Error/CustomExceptions.java
package com.example.BeFETest.Error;

public class CustomExceptions {
}
